www/pod/1.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-nginx
  namespace: default
  labels:
    app: myapp
spec:
  containers: 
    - name: app
      image: nginx:latest
